# qsar_flash

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  environment.yaml  pyproject.toml
examples/: graph_classification.py  graph_regression.py
notebooks/profiling/: 1memory_leaks.ipynb
notebooks/testing/: 1schnet.ipynb  2dimenet.ipynb  3dimenet_plus_plus.ipynb
qsar_flash/: __all__.py  __init__.py  utils.py
qsar_flash/backbones/: __init__.py  dimenet_plus_plus.py  schnet.py
qsar_flash/backbones/nn/: __init__.py
qsar_flash/datasets/: __init__.py  folder_dataset.py  qm9_property.py  smiles_tabular.py
qsar_flash/regression/: __init__.py  data.py  input.py  input_transform.py  model.py  molecular_model.py
scripts/tmqm/: dimenet_plus_plus_train.py  edge_update_net.py  schnet_train.py
